updated heroku links

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,9 @@
 	<h4>Example Creation Usage:</h4>
 	<p>
 		<code>
-			https://localhost.herokuapp.com/new/https://www.google.com
-			https://localhost.herokuapp.com/new/http://foo.com:80
+			https://sheltered-beyond-45384.herokuapp.comnew/https://www.google.com
+			<br/>
+			https://sheltered-beyond-45384.herokuapp.com/new/http://foo.com:80
 
 		</code>
 	</p>
@@ -30,14 +31,14 @@
 	<h4>Example Creation Output:</h4>
 	<p>
 		<code>
-			{ "original_url":"http://foo.com:80", "short_url":"https://localhost.herokuapp.com/8170" }
+			{ "original_url":"https://www.goodreads.com", "short_url":"https://sheltered-beyond-45384.herokuapp.com/Bk64aOAqe" }
 		</code>
 	</p>
 
 	<h4>Usage:</h4>
 	<p>
 		<code>
-			https://localhost.herokuapp.com/2871
+			https://sheltered-beyond-45384.herokuapp.com/HJKbT_R9l
 		</code>
 	</p>
 
